--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Carte
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,5 +13,8 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <div id="map" style="width: 100%; height: 100%">
+  </div>
+
+  <app-explore-container name="Carte"></app-explore-container>
 </ion-content>
