Leaflet geosarch == from address to GPS coords

--- a/src/global.scss
+++ b/src/global.scss
@@ -26,4 +26,5 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 /* Leaflet */
-@import "~leaflet/dist/leaflet.css"
+@import "~leaflet/dist/leaflet.css";
+@import "~leaflet-geosearch/dist/geosearch.css";
