--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -13,5 +13,12 @@
     </ion-toolbar>
   </ion-header>
 
+  <img *ngIf="photo" [src]="photo" alt="photo">
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+    <ion-fab-button (click)="takePicture()">
+      <ion-icon name="camera"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
   <app-explore-container name="Tab 3 page"></app-explore-container>
 </ion-content>
