--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -15,6 +15,7 @@
     <img [src]="photo" alt="photo" />
     <br>
     <button (click)="save()">save to server</button>
+    {{ downloadURL$ | async }}
   </div>
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button (click)="takePicture()">
